infrastructure/k8s/book-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
  namespace: library-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: book-service
  template:
    metadata:
      labels:
        app: book-service
    spec:
      containers:
        - name: book-service
          image: lms/book-service:latest
          ports:
            - containerPort: 50051
          readinessProbe:
            tcpSocket:
              port: 50051
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 50051
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: book-service
  namespace: library-system
spec:
  selector:
    app: book-service
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
